[gd_scene load_steps=17 format=3 uid="uid://cy03pj3iphrtr"]

[ext_resource type="Script" uid="uid://c7iog3qbjbu4r" path="res://src/ui/menus/tutorial.gd" id="1_8mo7a"]
[ext_resource type="Shader" uid="uid://liyy3rswu2an" path="res://src/ui/menus/background.gdshader" id="1_ih5pq"]
[ext_resource type="Texture2D" uid="uid://rlme3ikl0q5j" path="res://assets/water.png" id="2_ajcga"]
[ext_resource type="PackedScene" uid="uid://b854xt5qwqctp" path="res://src/ui/game_ui.tscn" id="3_3idu5"]
[ext_resource type="PackedScene" uid="uid://261qfcdd3sjt" path="res://src/model/loop_tool.tscn" id="4_oh5fe"]
[ext_resource type="PackedScene" uid="uid://bxpk6eksitrar" path="res://src/model/player.tscn" id="5_dsj32"]
[ext_resource type="PackedScene" uid="uid://ct1vpo7esd1h5" path="res://src/ui/menus/settings_menu.tscn" id="8_wuta4"]
[ext_resource type="Script" uid="uid://042v75r6or48" path="res://src/ui/buttons/settings_texture_button.gd" id="10_p76rx"]
[ext_resource type="Script" uid="uid://15rgs3frsj1j" path="res://src/ui/menus/continue_button.gd" id="11_2pmef"]
[ext_resource type="Texture2D" uid="uid://dtl7g1ivckeyq" path="res://assets/icons/engre.png" id="11_bimhp"]
[ext_resource type="StyleBox" uid="uid://deh0j1dwxiqxt" path="res://src/ui/custom_themes/panel_menu.tres" id="12_bg47k"]
[ext_resource type="PackedScene" uid="uid://b2jw008k6maxe" path="res://src/model/enemies/enemy_spawner.tscn" id="12_bimhp"]
[ext_resource type="Script" uid="uid://cqipchr6sf3y7" path="res://src/ui/menus/transition_screen.gd" id="15_hrhvq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0of8p"]
shader = ExtResource("1_ih5pq")
shader_parameter/wave_speed = Vector2(0.05, 0.03)
shader_parameter/wave_scale = 4.32
shader_parameter/noise_strength = 0.2
shader_parameter/caustic_strength = 0.372
shader_parameter/deep_color = Color(0.0834621, 0.206957, 0.535384, 1)
shader_parameter/shallow_color = Color(0.0799292, 0.257277, 0.522899, 1)
shader_parameter/wave_1_intensity = 0.7
shader_parameter/wave_2_intensity = 0.7

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h7v8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pmef"]
bg_color = Color(0.13678, 0.0337613, 0.190017, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mo7a")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.945098, 0.803922, 0.760784, 1)
z_index = -1000
material = SubResource("ShaderMaterial_0of8p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ajcga")
expand_mode = 1

[node name="GameUILayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="GameUILayer" node_paths=PackedStringArray("player") instance=ExtResource("3_3idu5")]
unique_name_in_owner = true
z_index = -1
player = NodePath("../../GameComponents/Player")

[node name="GameComponents" type="Node" parent="."]

[node name="LoopTool" parent="GameComponents" node_paths=PackedStringArray("player") instance=ExtResource("4_oh5fe")]
unique_name_in_owner = true
player = NodePath("../Player")

[node name="Player" parent="GameComponents" instance=ExtResource("5_dsj32")]
unique_name_in_owner = true
position = Vector2(960, 540)

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="TransitionScreen" type="ColorRect" parent="TransitionLayer"]
visible = false
modulate = Color(0, 0, 0.235294, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_hrhvq")

[node name="TutorialLayer" type="CanvasLayer" parent="."]

[node name="TutorialPanel" type="Panel" parent="TutorialLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -279.0
offset_right = 689.0
offset_bottom = 264.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("12_bg47k")

[node name="TutorialLabel" type="RichTextLabel" parent="TutorialLayer/TutorialPanel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 33.0
offset_top = 42.0
offset_right = 621.0
offset_bottom = 479.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
fit_content = true

[node name="ContinueButton" type="Button" parent="TutorialLayer/TutorialPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -85.0
offset_right = 222.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(164, 42)
theme_override_styles/focus = SubResource("StyleBoxEmpty_h7v8e")
theme_override_styles/disabled = SubResource("StyleBoxFlat_2pmef")
theme_override_styles/hover = ExtResource("12_bg47k")
theme_override_styles/pressed = ExtResource("12_bg47k")
theme_override_styles/normal = ExtResource("12_bg47k")
text = "Continue"
script = ExtResource("11_2pmef")

[node name="TutorialSpawner" parent="TutorialLayer/TutorialPanel" instance=ExtResource("12_bimhp")]
unique_name_in_owner = true
position = Vector2(1767, 378)
maximum_nb_enemies_on_screen = 1
spawn_distance = 0
spawn_speed = 23.0

[node name="OptionsLayer" type="CanvasLayer" parent="."]

[node name="Options" parent="OptionsLayer" instance=ExtResource("8_wuta4")]
unique_name_in_owner = true
visible = false

[node name="SettingsButton" type="TextureButton" parent="OptionsLayer"]
process_mode = 3
anchors_preset = -1
anchor_left = 0.933
anchor_top = 0.873
anchor_right = 0.997
anchor_bottom = 0.993
offset_left = -127.36
offset_top = -120.84
offset_right = 124.76
offset_bottom = 139.56
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(187, 195)
texture_normal = ExtResource("11_bimhp")
script = ExtResource("10_p76rx")

[connection signal="mouse_entered" from="TutorialLayer/TutorialPanel/ContinueButton" to="TutorialLayer/TutorialPanel/ContinueButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TutorialLayer/TutorialPanel/ContinueButton" to="TutorialLayer/TutorialPanel/ContinueButton" method="_on_mouse_exited"]
[connection signal="pressed" from="TutorialLayer/TutorialPanel/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="OptionsLayer/SettingsButton" to="OptionsLayer/SettingsButton" method="_on_pressed"]
